[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/texture_fonts/Assets/Fonts/RobotoMono/RobotoMono-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/texture_fonts/Assets/TransparentBG.png" type="Texture" id=3]
[ext_resource path="res://addons/texture_fonts/UI/Components/TextureViewer/TextureViewer.gd" type="Script" id=4]
[ext_resource path="res://addons/texture_fonts/UI/Components/TextureViewer/TextureView.gd" type="Script" id=5]
[ext_resource path="res://addons/texture_fonts/UI/Components/TextureViewer/TextureContainer.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
extra_spacing_top = -2
extra_spacing_bottom = 5
font_data = ExtResource( 2 )

[node name="TextureViewer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heading" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Heading"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
text = "View Texture"

[node name="HSeparator" type="HSeparator" parent="Heading"]
margin_left = 86.0
margin_right = 901.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Heading"]
margin_left = 905.0
margin_top = 5.0
margin_right = 946.0
margin_bottom = 19.0
text = "Zoom:"

[node name="SpinBox" type="SpinBox" parent="Heading"]
margin_left = 950.0
margin_right = 1024.0
margin_bottom = 24.0
min_value = 10.0
max_value = 5000.0
step = 10.0
value = 100.0
exp_edit = true
suffix = "%"

[node name="Control" type="Control" parent="."]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="TextureContainer" type="Container" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureView" type="TextureRect" parent="Control/TextureContainer"]
margin_left = 512.0
margin_top = 286.0
margin_right = 512.0
margin_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
stretch_mode = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectPreview" type="ColorRect" parent="Control/TextureContainer/TextureView"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
color = Color( 1, 0, 0, 0.431373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/TextureContainer/TextureView/RectPreview"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -11.0
margin_right = 5.0
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.45098 )
text = "a"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Heading/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="mouse_entered" from="Control/TextureContainer" to="." method="_on_TextureContainer_mouse_entered"]
[connection signal="mouse_exited" from="Control/TextureContainer" to="." method="_on_TextureContainer_mouse_exited"]
[connection signal="resized" from="Control/TextureContainer" to="Control/TextureContainer" method="_on_TextureContainer_resized"]
[connection signal="mouse_entered" from="Control/TextureContainer/TextureView" to="Control/TextureContainer/TextureView" method="_on_TextureView_mouse_entered"]
[connection signal="mouse_exited" from="Control/TextureContainer/TextureView" to="Control/TextureContainer/TextureView" method="_on_TextureView_mouse_exited"]
